--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
+  "scripts": 
+    "start": "node index.js"
     "test": "nodemon index.js",
-    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
